sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: '(' expected but identifier found.
  if isSmaller(i,i-1){
     ^AlgInsertionSort:16: error: illegal start of simple expression
} 
^