sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var current = 0
  var j = 0
}
for (i<-1 to getValueCount()-1){
  if isSmaller(i,i-1){
    current = getValue(i)
    j = i
    while(j!=0 || isSmaller(j,j-1)){
      setValue(j, getValue(j-1))
      j-=1
    }
    setValue(j, current)
  }
}